--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Flaskr</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style_flask.css') }}">
 <div class=page>
 	<h1>Flaskr</h1>
 	<div class=metanav>
@@ -15,43 +15,3 @@
 	{% endfor %}
 	{% block body %}{% endblock %}
 </div>
-
-{% expends "layout.html" %}
-{% block body %}
-	{% if session.logged_in %}
-	<form action="{{ url_for('add_entry') }}" method=post class=add-entry>
-		<dl>
-			<dt>Title:
-			<dd><input type=text size=30 name=title>
-			<dt>Text:
-			<dd><textarea name=text rows=5 cols=40></textarea>
-			<dd><input type=submit value=Share>
-		</dl>
-	</form>
-	{% endif %}
-	<ul class=entires>
-	{% for entry in entries %}
-		<li><h2>{{ enrty.title }}</h2>{{ entry.text|safe }}
-	{% else %}
-		<li><em>Unbelievable. No entries here so far</em>
-	{% endfor %}
-</ul>
-{% endlock %}
-
-{% extends "layout.html" %}
-{% block body %}
-	<h2>Login</h2>
-	{% if error %}<p class=erroe><strong>Error:</strong> {{ error }}{% endif %}
-	<form action="{{ url_for('login') }}" method=post>
-		<dl>
-			<dt>Username:
-			<dd><input type=text name=username>
-			<dt>Password:
-			<dd><input type=password name=password>
-			<dd><input type=submit value=Login>
-		</dl>
-	</form>
-{% endlock %}
-
-
-
