--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,13 @@
 			<a href="{{ url_for('login') }}">log in</a>
 			<a href="{{ url_for('signup') }}">sign up</a>
 		{% else %}
+			
+			<p> welcome, {{ session.email }}</p>
+			{% if session.admin %}
+			<a href="{{ url_for('user_page') }}">user page</a>
+			{% endif %}
 			<a href="{{ url_for('logout') }}">log out</a>
+
 		{% endif %}
 	</div>
 	{% for message in get_flashed_messages() %}
