--- a/static/css/style_flask.css
+++ b/static/css/style_flask.css
@@ -63,3 +63,19 @@ span {
 	display: none;
 	color : #ff4343;
 }
+table {
+	
+	padding : 10px;
+	border-style: solid;
+    border-width: 3px;
+}
+td{
+	padding : 10px;
+	border-style: inset;
+    border-width: 2px;
+}
+th{
+	padding : 10px;
+	border-style: inset;
+    border-width: 2px;
+}
