--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block body %}
 	<table>
 {% for i in result %}
    <tr>
@@ -17,6 +12,4 @@
    </tr>
 {% endfor %}
 </table>
-	
-</body>
-</html>
+{% endblock %}
