--- a/SNS_appengine/application/templates/posts.html
+++ b/SNS_appengine/application/templates/posts.html
@@ -5,7 +5,7 @@
 <h2>Posts</h2>
 <a href = "{{url_for('write')}}"><input type = "button" name = "write" value = "write"></a>
 <dl>
-	<dt>JEEIN's wall</dt>
+	<dt>{{ wall_name }}'s wall</dt>
 	<dd>hello, my name is jeein, i am trying to make SNS... 
 		<a href="{{url_for('read')}}">read more...</a></dd>
 </dl>
