--- a/SNS_appengine/application/templates/read.html
+++ b/SNS_appengine/application/templates/read.html
@@ -4,14 +4,19 @@
 <dl>
 	<dt>{{ post.user.username }}</dt>
 	<dd>{{ post.body }}</dd>
+	<a href = "{{ url_for('post_edit', post_id = post.id )}}"><input type = "submit" value= "edit"></a>
 </dl>
 <dl>
 	<dt>comment</dt>
 	{% for comment in post.comments %}
-	<dd id = "comment_dd">{{ comment.user.username }} : {{ comment.body }}</dd>
+	<dd id = "comment_dd">{{ comment.user.username }} : {{ comment.body }}
+	<a href = "{{ url_for('delete_comment', comment_id = comment.id, post_id = post.id) }}"><input type = "submit" value= "delete"></a></dd>
+
 	{% endfor %}
-	<dd><input type = "text" name = "comments">
-		<input type = "submit" name = "upload_comments"></dd>
+	<form action="{{ url_for('comments', post_id = post.id) }}" method="post">
+		<input type = "text" name = "comments">
+		<input type = "submit" value = "submit"></a></dd>
+	</form>
 
 </dl>
 </div>
