--- a/SNS_appengine/application/templates/read.html
+++ b/SNS_appengine/application/templates/read.html
@@ -4,14 +4,17 @@
 <dl>
 	<dt>{{ post.user.username }}</dt>
 	<dd>{{ post.body }}</dd>
+	{% if session.user_id == post.user_id %}
 	<a href = "{{ url_for('post_edit', post_id = post.id )}}"><input type = "submit" value= "edit"></a>
+	{% endif %}
 </dl>
 <dl>
 	<dt>comment</dt>
 	{% for comment in post.comments %}
 	<dd id = "comment_dd">{{ comment.user.username }} : {{ comment.body }}
-	<a href = "{{ url_for('delete_comment', comment_id = comment.id, post_id = post.id) }}"><input type = "submit" value= "delete"></a></dd>
-
+	{% if session.user_id ==  post.user_id %}
+	<a href = "{{ url_for('delete_comment', comment_id = comment.id, post_id = post.id) }}"><input type = "submit" value= "X"></a></dd>
+	{% endif %}
 	{% endfor %}
 	<form action="{{ url_for('comments', post_id = post.id) }}" method="post">
 		<input type = "text" name = "comments">
