--- a/SNS_appengine/application/templates/follow_ajax.html
+++ b/SNS_appengine/application/templates/follow_ajax.html
@@ -1,3 +1,3 @@
 {% for user in users %}
-<li>{{ user.username }}</li>
+<a href = " {{url_for('click_follow', followee_id = user.id)}}"><li>{{ user.username }}</li></a>
 {% endfor %}
