--- a/SNS_appengine/application/templates/edit.html
+++ b/SNS_appengine/application/templates/edit.html
@@ -7,8 +7,10 @@
 		<dl>
 			<dt>JEEIN</dt>
 			<dd><input type="checkbox" name = "secret">secret</dd>
-			<dd><textarea row="20" cols ="30" name="content">{{ post.body }}</textarea>
-			<input type = "submit" name = "upload_content"></dd>
+			<dd>
+				<textarea row="20" cols ="30" name="content">{{ post.body }}</textarea>
+				<input type = "submit" name = "upload_content">
+			</dd>
 		</dl>
 	</div>
 </form>
