--- a/SNS_appengine/application/templates/newsfeed.html
+++ b/SNS_appengine/application/templates/newsfeed.html
@@ -1,11 +1,12 @@
 {% extends "layout.html" %}
 {% block body %}
+<script src= "{{url_for('static', filename='js/newsfeed_ajax.js')}}" type='text/javascript'></script>
 
 <div class="out_layer">
 <h2>Newsfeed</h2>
 <input type = "hidden", value = "{{ session.wall_id }}" id = "wall_id">
-<div>
-	{% for user_id_post in user_id_posts %}
+<div id = "newsfeed_here">
+<!-- 	{% for user_id_post in user_id_posts %}
 	<dl>
 		<dt>{{ user_id_post.user.username }} : {{ user_id_post.body }}</dt>
 	</dl>
@@ -15,7 +16,7 @@
 	<dl>
 		<dt>{{ wall_id_post.user.username }} : {{ wall_id_post.body }}</dt>
 	</dl>
-	{% endfor %}
+	{% endfor %} -->
 </div>
 </div>
 {% endblock %}
