--- a/SNS_appengine/application/templates/follow.html
+++ b/SNS_appengine/application/templates/follow.html
@@ -1,26 +1,24 @@
 {% extends "layout.html" %}
 {% block body %}
 <script src= "{{url_for('static', filename='js/ajax_follow.js')}}" type='text/javascript'></script>
-<div class= "out_layer">
-	<input type = "text" name = "follow" id = "follow">
-	<div id="follow_here">
-	</div>
+	<div class= "out_layer">
+		<input type = "text" name = "follow" id = "follow">
+		<div id="follow_here"></div>
 	</div>
 	
 	<div class = "out_layer">
-	<dl><h1><span style = "color:navy;">follower</span></h1>
+	<dl>
+		<h1><span style = "color:navy;">follower</span></h1>
 		{% for follower in my_followers %}
-	<dt >{{ follower.follower.username }}</dt>
+			<dt>{{ follower.follower.username }}</dt>
 		{% endfor %}
 	</dl>
-	
-	
-	
-	<dl><h1><span style = "color:navy;">followee</span></h1>
-		{% for followee in my_followees %}
-	<dt > {{ followee.followee.username }} </dt>
-		{% endfor %}
-</dl>
-</div>
 
+	<dl>
+		<h1><span style = "color:navy;">followee</span></h1>
+		{% for followee in my_followees %}
+			<dt> {{ followee.followee.username }} </dt>
+		{% endfor %}
+	</dl>
+	</div>
 {% endblock %}
