--- a/SNS_appengine/application/templates/posts.html
+++ b/SNS_appengine/application/templates/posts.html
@@ -3,10 +3,10 @@
 <script src= "{{url_for('static', filename='js/ajax.js')}}" type='text/javascript'></script>
 
 <div class="out_layer">
-<h2>Posts</h2>
-<a href = "{{url_for('write')}}"><input type = "button" name = "write" value = "write"></a>
-<input type = "hidden", value = "{{ session.wall_id }}" id = "wall_id">
-<div id="here">
-</div>
+	<h2>Posts</h2>
+	<a href = "{{url_for('write')}}">
+		<input type = "button" name = "write" value = "write">
+	</a>
+	<div id="load_posts"></div>
 </div>
 {% endblock %}
